force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>