force-app/main/default/objects/Alert__c/fields/Action_plan__c.field-meta.xml
<CustomField>
    <fullName>Action_plan__c</fullName>
    <label>Action plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Action_plan</valueSetName>
    </valueSet>
</CustomField>