force-app/main/default/objects/Alert__c/fields/Action_Plan_approved_by_TL__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_approved_by_TL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Plan approved by TL</label>
    <type>Checkbox</type>
</CustomField>