force-app/main/default/objects/Alert__c/fields/Action_plan_comment__c.field-meta.xml
<CustomField>
    <fullName>Action_plan_comment__c</fullName>
    <label>Action plan - comment</label>
    <type>TextArea</type>
</CustomField>