force-app/main/default/objects/Alert__c/fields/Action_Plan_s_pushed__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_s_pushed__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <label>Action Plan(s) pushed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Issue_KPI__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MP_LC_Action_Plan</valueSetName>
    </valueSet>
</CustomField>