force-app/main/default/objects/Alert__c/fields/Actual_Number_of_cases__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_cases__c</fullName>
    <label>Actual Number of cases</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>