force-app/main/default/objects/Alert__c/fields/Actual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rate__c</fullName>
    <label>Actual Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>