force-app/main/default/objects/Alert__c/fields/Adapted_objective_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Adapted_objective_Buyback__c</fullName>
    <businessOwnerUser>cyriac.barrois@backmarket.com</businessOwnerUser>
    <inlineHelpText>Field used to change the initial objective of the Buyback Monitoring Period</inlineHelpText>
    <label>Adapted objective (Buyback)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>