force-app/main/default/objects/Alert__c/fields/AlertLimitation__c.field-meta.xml
<CustomField>
    <fullName>AlertLimitation__c</fullName>
    <label>Alert limitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>