force-app/main/default/objects/Alert__c/fields/BizdevToEmail__c.field-meta.xml
<CustomField>
    <fullName>BizdevToEmail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bizdev to email</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts4</relationshipName>
    <type>Lookup</type>
</CustomField>