force-app/main/default/objects/Alert__c/fields/Commitment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Flag__c</fullName>
    <label>Commitment Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>