force-app/main/default/objects/Alert__c/fields/Contact_for_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for email</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>