force-app/main/default/objects/Alert__c/fields/Current_Quarterly_Sales_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarterly_Sales_Level__c</fullName>
    <inlineHelpText>Manually updated for now - Based on Perf data QTD later</inlineHelpText>
    <label>Current Quarterly Sales Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>