force-app/main/default/objects/Alert__c/fields/Customer_information__c.field-meta.xml
<CustomField>
    <fullName>Customer_information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box if the invoice displays the full name and the address of the customer.</inlineHelpText>
    <label>Customer information</label>
    <type>Checkbox</type>
</CustomField>