force-app/main/default/objects/Alert__c/fields/Data_team_check__c.field-meta.xml
<CustomField>
    <fullName>Data_team_check__c</fullName>
    <label>Data team check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>To archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>