force-app/main/default/objects/Alert__c/fields/Date_of_the_invoice__c.field-meta.xml
<CustomField>
    <fullName>Date_of_the_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box if the invoice displays the date of the invoice.</inlineHelpText>
    <label>Date of the invoice</label>
    <type>Checkbox</type>
</CustomField>