force-app/main/default/objects/Alert__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <businessOwnerUser>antony.thalien@backmarket.com</businessOwnerUser>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>