force-app/main/default/objects/Alert__c/fields/Duplicate_record__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate record</label>
    <type>Checkbox</type>
</CustomField>