force-app/main/default/objects/Alert__c/fields/Entry_number_of_cases__c.field-meta.xml
<CustomField>
    <fullName>Entry_number_of_cases__c</fullName>
    <label>Entry number of cases</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>