force-app/main/default/objects/Alert__c/fields/Entry_rate__c.field-meta.xml
<CustomField>
    <fullName>Entry_rate__c</fullName>
    <label>Entry rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>