force-app/main/default/objects/Alert__c/fields/ETA_for_test__c.field-meta.xml
<CustomField>
    <fullName>ETA_for_test__c</fullName>
    <label>ETA for test</label>
    <type>Date</type>
</CustomField>