force-app/main/default/objects/Alert__c/fields/External_recovery_agency__c.field-meta.xml
<CustomField>
    <fullName>External_recovery_agency__c</fullName>
    <label>External recovery agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paris Contentieux</fullName>
            </value>
            <value>
                <fullName>Titus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>