force-app/main/default/objects/Alert__c/fields/External_recovery_status__c.field-meta.xml
<CustomField>
    <fullName>External_recovery_status__c</fullName>
    <label>External recovery status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicable phase</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Scheduled recovery</fullName>
            </value>
            <value>
                <fullName>Waiting instructions</fullName>
            </value>
            <value>
                <fullName>Case sent to lawyer</fullName>
            </value>
            <value>
                <fullName>Unrecoverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>