force-app/main/default/objects/Alert__c/fields/First_Day_in_Debt__c.field-meta.xml
<CustomField>
    <fullName>First_Day_in_Debt__c</fullName>
    <label>First Day in Debt</label>
    <type>Date</type>
</CustomField>