force-app/main/default/objects/Alert__c/fields/Good_behavior_towards_Quality_charter__c.field-meta.xml
<CustomField>
    <fullName>Good_behavior_towards_Quality_charter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No new cases of Charter Breach</label>
    <type>Checkbox</type>
</CustomField>