force-app/main/default/objects/Alert__c/fields/Has_been_saved_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_saved_on__c</fullName>
    <label>Has been saved on</label>
    <type>Date</type>
</CustomField>