force-app/main/default/objects/Alert__c/fields/Has_begun_on__c.field-meta.xml
<CustomField>
    <fullName>Has_begun_on__c</fullName>
    <formula>if(not(ISBLANK( Has_begun_on_import__c ) ),Has_begun_on_import__c,DATEVALUE ( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has begun on</label>
    <type>Date</type>
</CustomField>