force-app/main/default/objects/Alert__c/fields/Has_begun_on_import__c.field-meta.xml
<CustomField>
    <fullName>Has_begun_on_import__c</fullName>
    <label>Has begun on import</label>
    <type>Date</type>
</CustomField>