force-app/main/default/objects/Alert__c/fields/Has_entered_in_progress_on__c.field-meta.xml
<CustomField>
    <fullName>Has_entered_in_progress_on__c</fullName>
    <label>Has entered in progress on</label>
    <type>Date</type>
</CustomField>