force-app/main/default/objects/Alert__c/fields/Has_entered_Last_chance_on__c.field-meta.xml
<CustomField>
    <fullName>Has_entered_Last_chance_on__c</fullName>
    <label>Has entered Last chance on</label>
    <type>Date</type>
</CustomField>