force-app/main/default/objects/Alert__c/fields/Has_failed_on__c.field-meta.xml
<CustomField>
    <fullName>Has_failed_on__c</fullName>
    <label>Has failed on</label>
    <type>Date</type>
</CustomField>