force-app/main/default/objects/Alert__c/fields/HaveBeenValidatedOn__c.field-meta.xml
<CustomField>
    <fullName>HaveBeenValidatedOn__c</fullName>
    <label>Have been validated on</label>
    <type>Date</type>
</CustomField>