force-app/main/default/objects/Alert__c/fields/Invoice_attachment_status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_attachment_status__c</fullName>
    <label>Invoice attachment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attached in SF</fullName>
            </value>
            <value>
                <fullName>Not attached in SF</fullName>
            </value>
            <value>
                <fullName>Requested from the merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>