force-app/main/default/objects/Alert__c/fields/Is_anticipated_LC__c.field-meta.xml
<CustomField>
    <fullName>Is_anticipated_LC__c</fullName>
    <formula>Has_begun_on__c &gt; (Has_entered_Last_chance_on__c - 28)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is anticipated LC</label>
    <type>Checkbox</type>
</CustomField>