force-app/main/default/objects/Alert__c/fields/Is_archived__c.field-meta.xml
<CustomField>
    <fullName>Is_archived__c</fullName>
    <formula>RecordType.DeveloperName = &apos;Monitoring_Period_Sales_Archived&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is archived</label>
    <type>Checkbox</type>
</CustomField>