force-app/main/default/objects/Alert__c/fields/Is_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Is_Buyback__c</fullName>
    <formula>RecordType.DeveloperName = &apos;Monitoring_Period_Buyback&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Buyback</label>
    <type>Checkbox</type>
</CustomField>