force-app/main/default/objects/Alert__c/fields/Is_locked__c.field-meta.xml
<CustomField>
    <fullName>Is_locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_locked</label>
    <type>Checkbox</type>
</CustomField>