force-app/main/default/objects/Alert__c/fields/Issue_identified__c.field-meta.xml
<CustomField>
    <fullName>Issue_identified__c</fullName>
    <label>Issue identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burning Chargers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>