force-app/main/default/objects/Alert__c/fields/Issue_KPI__c.field-meta.xml
<CustomField>
    <fullName>Issue_KPI__c</fullName>
    <label>Issue - KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_KPI</valueSetName>
    </valueSet>
</CustomField>