force-app/main/default/objects/Alert__c/fields/Issue_KPI_old_and_new__c.field-meta.xml
<CustomField>
    <fullName>Issue_KPI_old_and_new__c</fullName>
    <formula>CASE( TEXT(Issue_KPI__c) , 
    &apos;Buyback - Cancellation (Functional) rate&apos;,&apos;Buyback - Cancellation rate&apos;, 
    &apos;Buyback - Counter-Proposal (Functional) rate&apos;, &apos;Buyback - Counter-Proposal rate&apos;,
    &apos;Buyback - Counter-Proposal (Non Functional) rate&apos;, &apos;Buyback - Counter-Proposal rate&apos;,
    &apos;Buyback - Pending Order rate&apos;, &apos;Buyback - On-hold rate&apos;,
    TEXT(Issue_KPI__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue KPI old and new</label>
    <type>Text</type>
</CustomField>