force-app/main/default/objects/Alert__c/fields/Last_payout_update__c.field-meta.xml
<CustomField>
    <fullName>Last_payout_update__c</fullName>
    <label>Last payout update</label>
    <type>Date</type>
</CustomField>