force-app/main/default/objects/Alert__c/fields/LC_MO_triggered__c.field-meta.xml
<CustomField>
    <fullName>LC_MO_triggered__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <label>LC MO triggered</label>
    <type>Checkbox</type>
</CustomField>