force-app/main/default/objects/Alert__c/fields/Link_to_more_details__c.field-meta.xml
<CustomField>
    <fullName>Link_to_more_details__c</fullName>
    <label>Link to more details</label>
    <type>Url</type>
</CustomField>