force-app/main/default/objects/Alert__c/fields/Main_Reason__c.field-meta.xml
<CustomField>
    <fullName>Main_Reason__c</fullName>
    <label>Main Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Voluntary</fullName>
                <isActive>false</isActive>
                <label>Voluntary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>