force-app/main/default/objects/Alert__c/fields/Main_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Main_Root_Cause__c</fullName>
    <label>Main Root Cause</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB Completion Rate</fullName>
            </value>
            <value>
                <fullName>Listing Drop</fullName>
            </value>
            <value>
                <fullName>Orders Drop</fullName>
            </value>
            <value>
                <fullName>Inactive Days Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>