force-app/main/default/objects/Alert__c/fields/Merchant_debt__c.field-meta.xml
<CustomField>
    <fullName>Merchant_debt__c</fullName>
    <label>Merchant debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>