force-app/main/default/objects/Alert__c/fields/Merchant_information__c.field-meta.xml
<CustomField>
    <fullName>Merchant_information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box if the invoice displays everything hereafter: the corporate name of the merchant, their head office or legal domicile address, their company ID number (e.g. SIRET in FR), and their VAT number.</inlineHelpText>
    <label>Merchant information</label>
    <type>Checkbox</type>
</CustomField>