force-app/main/default/objects/Alert__c/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <formula>IF( CONTAINS(  Owner__r.UserRole.Name , $UserRole.Name )  || ( Owner__r.Id == $User.Id ) ||  ( Manager__r.X18_Digit_ID__c == $User.Id ) , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>