force-app/main/default/objects/Alert__c/fields/Number_of_the_invoice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_the_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box if the invoice displays an invoice number / reference ID.</inlineHelpText>
    <label>Number of the invoice</label>
    <type>Checkbox</type>
</CustomField>