force-app/main/default/objects/Alert__c/fields/Order_IDs__c.field-meta.xml
<CustomField>
    <fullName>Order_IDs__c</fullName>
    <label>Order IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>