force-app/main/default/objects/Alert__c/fields/OTDR_Selfcare__c.field-meta.xml
<CustomField>
    <fullName>OTDR_Selfcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTDR Selfcare</label>
    <type>Checkbox</type>
</CustomField>