force-app/main/default/objects/Alert__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>USed for merchant debt recovery process - not related to record access</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts5</relationshipName>
    <type>Lookup</type>
</CustomField>